--- a/src/stylesheets/BuyTicket.css
+++ b/src/stylesheets/BuyTicket.css
@@ -352,6 +352,10 @@
   bottom: 0;
 }
 
+.react-tel-input .country-list{
+  z-index: 10001;
+}
+
 @media (max-width:768px) {
   .RouteSymbolBuyTicket {
     height: fit-content;
