--- a/src/stylesheets/BuyTicket.css
+++ b/src/stylesheets/BuyTicket.css
@@ -352,8 +352,51 @@
   bottom: 0;
 }
 
-.react-tel-input .country-list{
+.react-tel-input .country-list {
   z-index: 10001;
+}
+
+.modal {
+  display: flex;
+  flex-direction: column;
+  width: 100vh;
+  height: 100vw;
+  background-color: none;
+  padding: 25vh 10vw;
+}
+
+.modal-content {
+  width: 80vw;
+  height: 50vh;
+  background-color: var(--mbc);
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  gap: 20vh;
+}
+
+.modal-content>span {
+  font-style: var(--mbfs);
+  color: var(--mtcb);
+  text-align: center;
+}
+
+.modal-content>button {
+  display: flex;
+  flex-direction: column;
+  padding: 5px 20px;
+  background-color: var(--blue);
+  color: var(--mtc);
+  border-radius: 8px;
+  transition: 0.5s;
+}
+
+.modal-content>button:hover {
+  background-color: var(--dark-blue);
+  transition: 0.5s;
 }
 
 @media (max-width:768px) {
